--- a/Project- Music Composition/codes - data/Modelling_using_LSTM_piano-midi.ipynb
+++ b/Project- Music Composition/codes - data/Modelling_using_LSTM_piano-midi.ipynb
@@ -442,6 +442,7 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
+    "collapsed": true,
     "id": "XUZG8MD5KciY"
    },
    "outputs": [],
@@ -557,13 +558,7 @@
       "76187/76187 [==============================] - 41s 537us/step - loss: 54.4936 - dense_2_loss: 0.0000e+00 - dense_2_acc: 0.0582 - dense_2_acc_1: 0.1822 - dense_2_acc_2: 0.2355 - dense_2_acc_3: 0.2999 - dense_2_acc_4: 0.3890 - dense_2_acc_5: 0.4627 - dense_2_acc_6: 0.5155 - dense_2_acc_7: 0.5344 - dense_2_acc_8: 0.5473 - dense_2_acc_9: 0.5615 - dense_2_acc_10: 0.5680 - dense_2_acc_11: 0.5664 - dense_2_acc_12: 0.5773 - dense_2_acc_13: 0.5803 - dense_2_acc_14: 0.5770 - dense_2_acc_15: 0.5845 - dense_2_acc_16: 0.5875 - dense_2_acc_17: 0.5812 - dense_2_acc_18: 0.5865 - dense_2_acc_19: 0.5884 - dense_2_acc_20: 0.5814 - dense_2_acc_21: 0.5879 - dense_2_acc_22: 0.5887 - dense_2_acc_23: 0.5800 - dense_2_acc_24: 0.5870 - dense_2_acc_25: 0.5884 - dense_2_acc_26: 0.5809 - dense_2_acc_27: 0.5861 - dense_2_acc_28: 0.5872 - dense_2_acc_29: 1.3126e-05\n",
       "Epoch 6/30\n",
       "76187/76187 [==============================] - 41s 538us/step - loss: 54.1768 - dense_2_loss: 0.0000e+00 - dense_2_acc: 0.0582 - dense_2_acc_1: 0.1819 - dense_2_acc_2: 0.2352 - dense_2_acc_3: 0.3011 - dense_2_acc_4: 0.3907 - dense_2_acc_5: 0.4640 - dense_2_acc_6: 0.5149 - dense_2_acc_7: 0.5363 - dense_2_acc_8: 0.5501 - dense_2_acc_9: 0.5639 - dense_2_acc_10: 0.5710 - dense_2_acc_11: 0.5696 - dense_2_acc_12: 0.5820 - dense_2_acc_13: 0.5838 - dense_2_acc_14: 0.5807 - dense_2_acc_15: 0.5877 - dense_2_acc_16: 0.5893 - dense_2_acc_17: 0.5837 - dense_2_acc_18: 0.5899 - dense_2_acc_19: 0.5921 - dense_2_acc_20: 0.5852 - dense_2_acc_21: 0.5910 - dense_2_acc_22: 0.5924 - dense_2_acc_23: 0.5850 - dense_2_acc_24: 0.5905 - dense_2_acc_25: 0.5921 - dense_2_acc_26: 0.5836 - dense_2_acc_27: 0.5888 - dense_2_acc_28: 0.5908 - dense_2_acc_29: 2.6251e-054s - loss: 54.1556 - dense_2_loss: 0.0000e+00 - dense_2_acc: 0.0577 - dense_2_acc_1: 0.1825 - dense_2_acc_2: 0.2362 - dense_2_acc_3: 0.3017 - dense_2_acc_4: 0.3902 - dense_2_acc_5: 0.4641 - dense_2_acc_6: 0.5157 - dense_2_acc_7: 0.5371 - dense_2_acc_8: 0.5500 - dense_2_acc_9: 0.5632 - dense_2_acc_10: 0.5710 - dense_2_acc_11: 0.5694 - dense_2_acc_12: 0.5824 - dense_2_acc_13: 0.5852 - dense_2_acc_14: 0.5812 - dense_2_acc_15: 0.5878 - dense_2_acc_16: 0.5901 - dense_2_acc_17: 0.5839 - dense_2_acc_18: 0.5909 - dense_2_acc_19: 0.5923 - dense_2_acc_20: 0.5852 - dense_2_acc_21: 0.5911 - dense_2_acc_22: 0.5924 - dense_2_acc_23: 0.5855 - dense_2_acc_24: 0.5913 - dense_2_acc_25: 0.5931 - dense_2_acc_26: 0.5834 - dense_2_acc_27: 0.5886 - dense_2_acc_28: 0.5914 - dense_2_acc_2 - ETA: 3s - loss: 54.1703 - dense_2_loss: 0.0000e+00 - dense_2_acc: 0.0579 - dense_2_acc_1: 0.1826 - dense_2_acc_2: 0.2362 - dense_2_acc_3: 0.3016 - dense_2_acc_4: 0.3904 - dense_2_acc_5: 0.4638 - dense_2_acc_6: 0.5152 - dense_2_acc_7: 0.5369 - dense_2_acc_8: 0.5496 - dense_2_acc_9: 0.5634 - dense_2_acc_10: 0.5708 - dense_2_acc_11: 0.5692 - dense_2_acc_12: 0.5823 - dense_2_acc_13: 0.5847 - dense_2_acc_14: 0.5809 - dense_2_acc_15: 0.5875 - dense_2_acc_16: 0.5898 - dense_2_acc_17: 0.5840 - dense_2_acc_18: 0.5906 - dense_2_acc_19: 0.5921 - dense_2_acc_20: 0.5852 - dense_2_acc_21: 0.5907 - dense_2_acc_22: 0.5924 - dense_2_acc_23: 0.5855 - dense_2_acc_24: 0.5910 - dense_2_acc_25: 0.5923 - dense_2_acc_26: 0.5835 - dense_2_acc_27: 0.5886 - dens\n",
-      "Epoch 7/30\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 7/30\n",
       "76187/76187 [==============================] - 39s 506us/step - loss: 53.9441 - dense_2_loss: 0.0000e+00 - dense_2_acc: 0.0582 - dense_2_acc_1: 0.1809 - dense_2_acc_2: 0.2362 - dense_2_acc_3: 0.3004 - dense_2_acc_4: 0.3907 - dense_2_acc_5: 0.4648 - dense_2_acc_6: 0.5170 - dense_2_acc_7: 0.5369 - dense_2_acc_8: 0.5508 - dense_2_acc_9: 0.5650 - dense_2_acc_10: 0.5721 - dense_2_acc_11: 0.5712 - dense_2_acc_12: 0.5827 - dense_2_acc_13: 0.5857 - dense_2_acc_14: 0.5826 - dense_2_acc_15: 0.5903 - dense_2_acc_16: 0.5926 - dense_2_acc_17: 0.5863 - dense_2_acc_18: 0.5930 - dense_2_acc_19: 0.5955 - dense_2_acc_20: 0.5872 - dense_2_acc_21: 0.5931 - dense_2_acc_22: 0.5948 - dense_2_acc_23: 0.5871 - dense_2_acc_24: 0.5929 - dense_2_acc_25: 0.5948 - dense_2_acc_26: 0.5870 - dense_2_acc_27: 0.5917 - dense_2_acc_28: 0.5937 - dense_2_acc_29: 2.6251e-05\n",
       "Epoch 8/30\n",
       "76187/76187 [==============================] - 38s 502us/step - loss: 53.7655 - dense_2_loss: 0.0000e+00 - dense_2_acc: 0.0582 - dense_2_acc_1: 0.1819 - dense_2_acc_2: 0.2360 - dense_2_acc_3: 0.3004 - dense_2_acc_4: 0.3910 - dense_2_acc_5: 0.4661 - dense_2_acc_6: 0.5175 - dense_2_acc_7: 0.5388 - dense_2_acc_8: 0.5522 - dense_2_acc_9: 0.5668 - dense_2_acc_10: 0.5731 - dense_2_acc_11: 0.5725 - dense_2_acc_12: 0.5845 - dense_2_acc_13: 0.5871 - dense_2_acc_14: 0.5839 - dense_2_acc_15: 0.5919 - dense_2_acc_16: 0.5952 - dense_2_acc_17: 0.5894 - dense_2_acc_18: 0.5952 - dense_2_acc_19: 0.5976 - dense_2_acc_20: 0.5898 - dense_2_acc_21: 0.5954 - dense_2_acc_22: 0.5971 - dense_2_acc_23: 0.5893 - dense_2_acc_24: 0.5949 - dense_2_acc_25: 0.5963 - dense_2_acc_26: 0.5887 - dense_2_acc_27: 0.5934 - dense_2_acc_28: 0.5956 - dense_2_acc_29: 2.6251e-05\n",
@@ -597,13 +592,7 @@
       "76187/76187 [==============================] - 38s 497us/step - loss: 52.9576 - dense_2_loss: 0.0000e+00 - dense_2_acc: 0.0582 - dense_2_acc_1: 0.1825 - dense_2_acc_2: 0.2357 - dense_2_acc_3: 0.3019 - dense_2_acc_4: 0.3924 - dense_2_acc_5: 0.4673 - dense_2_acc_6: 0.5210 - dense_2_acc_7: 0.5438 - dense_2_acc_8: 0.5575 - dense_2_acc_9: 0.5724 - dense_2_acc_10: 0.5794 - dense_2_acc_11: 0.5792 - dense_2_acc_12: 0.5901 - dense_2_acc_13: 0.5958 - dense_2_acc_14: 0.5916 - dense_2_acc_15: 0.5999 - dense_2_acc_16: 0.6030 - dense_2_acc_17: 0.5985 - dense_2_acc_18: 0.6046 - dense_2_acc_19: 0.6062 - dense_2_acc_20: 0.5994 - dense_2_acc_21: 0.6060 - dense_2_acc_22: 0.6071 - dense_2_acc_23: 0.5998 - dense_2_acc_24: 0.6057 - dense_2_acc_25: 0.6075 - dense_2_acc_26: 0.5993 - dense_2_acc_27: 0.6042 - dense_2_acc_28: 0.6061 - dense_2_acc_29: 2.6251e-05\n",
       "Epoch 20/30\n",
       "76187/76187 [==============================] - 38s 499us/step - loss: 52.9232 - dense_2_loss: 0.0000e+00 - dense_2_acc: 0.0582 - dense_2_acc_1: 0.1827 - dense_2_acc_2: 0.2357 - dense_2_acc_3: 0.3019 - dense_2_acc_4: 0.3923 - dense_2_acc_5: 0.4681 - dense_2_acc_6: 0.5207 - dense_2_acc_7: 0.5440 - dense_2_acc_8: 0.5573 - dense_2_acc_9: 0.5726 - dense_2_acc_10: 0.5792 - dense_2_acc_11: 0.5796 - dense_2_acc_12: 0.5907 - dense_2_acc_13: 0.5964 - dense_2_acc_14: 0.5918 - dense_2_acc_15: 0.6005 - dense_2_acc_16: 0.6038 - dense_2_acc_17: 0.5987 - dense_2_acc_18: 0.6057 - dense_2_acc_19: 0.6065 - dense_2_acc_20: 0.6004 - dense_2_acc_21: 0.6064 - dense_2_acc_22: 0.6083 - dense_2_acc_23: 0.6000 - dense_2_acc_24: 0.6069 - dense_2_acc_25: 0.6079 - dense_2_acc_26: 0.5992 - dense_2_acc_27: 0.6051 - dense_2_acc_28: 0.6056 - dense_2_acc_29: 2.6251e-05\n",
-      "Epoch 21/30\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 21/30\n",
       "76187/76187 [==============================] - 37s 484us/step - loss: 52.8898 - dense_2_loss: 0.0000e+00 - dense_2_acc: 0.0582 - dense_2_acc_1: 0.1825 - dense_2_acc_2: 0.2347 - dense_2_acc_3: 0.3025 - dense_2_acc_4: 0.3924 - dense_2_acc_5: 0.4674 - dense_2_acc_6: 0.5210 - dense_2_acc_7: 0.5437 - dense_2_acc_8: 0.5581 - dense_2_acc_9: 0.5723 - dense_2_acc_10: 0.5799 - dense_2_acc_11: 0.5799 - dense_2_acc_12: 0.5907 - dense_2_acc_13: 0.5965 - dense_2_acc_14: 0.5919 - dense_2_acc_15: 0.6010 - dense_2_acc_16: 0.6034 - dense_2_acc_17: 0.5994 - dense_2_acc_18: 0.6061 - dense_2_acc_19: 0.6072 - dense_2_acc_20: 0.6002 - dense_2_acc_21: 0.6058 - dense_2_acc_22: 0.6084 - dense_2_acc_23: 0.6002 - dense_2_acc_24: 0.6068 - dense_2_acc_25: 0.6081 - dense_2_acc_26: 0.5997 - dense_2_acc_27: 0.6053 - dense_2_acc_28: 0.6057 - dense_2_acc_29: 2.6251e-05\n",
       "Epoch 22/30\n",
       "76187/76187 [==============================] - 37s 482us/step - loss: 52.8606 - dense_2_loss: 0.0000e+00 - dense_2_acc: 0.0582 - dense_2_acc_1: 0.1829 - dense_2_acc_2: 0.2351 - dense_2_acc_3: 0.3024 - dense_2_acc_4: 0.3924 - dense_2_acc_5: 0.4676 - dense_2_acc_6: 0.5210 - dense_2_acc_7: 0.5439 - dense_2_acc_8: 0.5584 - dense_2_acc_9: 0.5728 - dense_2_acc_10: 0.5791 - dense_2_acc_11: 0.5796 - dense_2_acc_12: 0.5907 - dense_2_acc_13: 0.5968 - dense_2_acc_14: 0.5929 - dense_2_acc_15: 0.6009 - dense_2_acc_16: 0.6038 - dense_2_acc_17: 0.5995 - dense_2_acc_18: 0.6063 - dense_2_acc_19: 0.6072 - dense_2_acc_20: 0.6004 - dense_2_acc_21: 0.6077 - dense_2_acc_22: 0.6087 - dense_2_acc_23: 0.6014 - dense_2_acc_24: 0.6073 - dense_2_acc_25: 0.6086 - dense_2_acc_26: 0.5997 - dense_2_acc_27: 0.6056 - dense_2_acc_28: 0.6065 - dense_2_acc_29: 2.6251e-05\n",
@@ -684,5 +673,82 @@
     "plt.savefig(\"piano_loss.png\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[66.08233048865887,\n",
+       " 57.30102874387543,\n",
+       " 55.7143480038861,\n",
+       " 54.95490775463272,\n",
+       " 54.49356100526595,\n",
+       " 54.17682241014999,\n",
+       " 53.944118980679995,\n",
+       " 53.765479588468864,\n",
+       " 53.624926712719294,\n",
+       " 53.50843904801594,\n",
+       " 53.40780961734924,\n",
+       " 53.327191343393494,\n",
+       " 53.255552294699086,\n",
+       " 53.1911200606831,\n",
+       " 53.135965657549946,\n",
+       " 53.08487351315261,\n",
+       " 53.03895027073222,\n",
+       " 52.99786759073764,\n",
+       " 52.95759618429869,\n",
+       " 52.923247461753206,\n",
+       " 52.88984928133357,\n",
+       " 52.860632392204046,\n",
+       " 52.82984114751596,\n",
+       " 52.8036316271264,\n",
+       " 52.77923655394474,\n",
+       " 52.75587776017148,\n",
+       " 52.73340821420453,\n",
+       " 52.71275793775518,\n",
+       " 52.69222426410422,\n",
+       " 52.67460942719316]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loss"
+   ]
   }
-  
+ ],
+ "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "name": "Modelling using LSTM.ipynb",
+   "provenance": [],
+   "version": "0.3.2"
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.2"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 1
+}
